infrastructure/ingresses/base/headlamp-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    argocd.argoproj.io/sync-wave: "80"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.cluster.confluentdemo.local`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
          scheme: http
  tls:
    secretName: headlamp-tls
